# Discovery-World-Pong-MSOE

./: .gitignore  LICENSE  README.md  docker-compose-dev-zscaler.yml  docker-compose-dev.yml  docker-compose.yml  package-lock.json
.github/ISSUE_TEMPLATE/: user-story.md
.github/workflows/: build-and-push.yml  deploy-dev.yml  deploy-prod.yml  deploy.yml  test.yml
docs/: CONTRIBUTING.md  vision.md
docs/Troubleshooting/: known_issues.md
docs/assets/: docker_container_structure.drawio.html  mqtt_messaging_diagram.drawio
docs/guides/: docker.md  scripting.md  tensorflow.md
modules/ai-paddle-control/: Dockerfile  ai_driver.py  ai_subscriber.py  requirements.txt
modules/audio-engine/: cli_command_provider.py  mqtt_command_provider.py
modules/game-engine/: player.py
modules/gameboard/: .env  Dockerfile  package-lock.json  package.json
modules/human-paddle-control/: .dockerignore  Dockerfile  motion_driver.py  motion_subscriber.py  requirements.txt
modules/human-visualizer/: Dockerfile
modules/log-server/: Dockerfile  server.js
modules/neural-net-visualizer/: Dockerfile  visualization_driver.py
modules/shared/py_packages/: pyproject.toml  requirements.txt
modules/shared/py_packages/dw/state_machine/: __init__.py  pong_api.py
mqtt-broker/: docker-compose.yml
mqtt-explorer/: docker-compose.yml
setup/: autoinstall-user-data  close_windows.sh  create_profiles.sh  open_windows.sh  openvpn-monitor.service  openvpn-monitor.sh  pong.service  pong_start.desktop  pong_stop.desktop  post-install.sh  refresh-browsers.sh  start.sh  stop.sh
src/: build.sh
(+268 files in other folders)
